--- a/src/css/style.css
+++ b/src/css/style.css
@@ -167,6 +167,7 @@ ol {
 	letter-spacing: 4px;
 }
 
+
 .site-btn {
 	font-size: 14px;
 	color: #ffffff;
@@ -526,6 +527,27 @@ ol {
 	width: 300px;
 }
 
+.shop__search button {
+	background-color: #4caf50;
+	border: none;
+	color: white;
+	padding: 7px 15px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	border-radius: 4px;
+	transition: background-color 0.3s ease;
+}
+
+.shop__search button:hover {
+	background-color: #45a049;
+}
+
+
+
 .header__nav__option a {
 	display: inline-block;
 	margin-right: 26px;
@@ -572,6 +594,7 @@ ol {
 .canvas__open {
 	display: none;
 }
+
 
 /*---------------------
   Hero
@@ -1253,6 +1276,7 @@ ol {
 
 .shop__sidebar__accordion .card-heading {
 	cursor: pointer;
+	padding-top: 10px;
 }
 
 
@@ -1266,12 +1290,11 @@ ol {
 	margin-top: 5px;
 }
 
-.shop__sidebar__categories ul
+.shop__sidebar__categories
 {
 	height: 225px;
+	padding-left: 30px;
 }
-
-
 
 .shop__sidebar__categories ul li
 {
@@ -1482,8 +1505,9 @@ ol {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-	max-height: 200px;
+	max-height: 300px;
 	overflow-y: auto;
+	width: 90%;
 }
 
 .shop__sidebar__categories li {
@@ -1512,9 +1536,27 @@ ol {
 
 
 .product__pagination {
-	padding-top: 25px;
-	text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 500px;
 }
+
+.product__pagination button {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    margin-bottom: 10px;
+    background-color: black;
+    color: white;
+    transition: background-color 0.3s;
+}
+
+.product__pagination button:hover{
+    background-color: white;
+    color: black;
+}
+
 
 .product__pagination a {
 	display: inline-block;
@@ -1529,26 +1571,13 @@ ol {
 	margin-right: 30px;
 	margin-left: 10px;
 	border: 1px solid transparent;
-	transition: border-color 1s;
+	transition: border-color 0.5s;
 	text-decoration: none;
 }
 
 .product__pagination a:hover {
 	border-color: #111111;
 
-}
-.product__pagination button{
-	border-radius: 20px;
-	width: 120px;
-	height: 35px;
-	margin-bottom: 10px;
-	background-color: black;
-	color: white;
-	transition: background-color 0.7s;
-}
-.product__pagination button:hover{
-	background-color: white;
-	color: black;
 }
 
 .cardCat{
@@ -1560,7 +1589,34 @@ ol {
 	position: relative;
 }
 
+.delete__sort{
+	padding-top: 20px;
+}
 
+.delete__sort button {
+	display: block;
+	padding: 5px 10px;
+	border: none;
+	border-radius: 5px;
+	font-size: 14px;
+	line-height: 1;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+	background-color: #f00;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+
+.delete__sort button:hover {
+	background-color: #ee0011;
+}
+
+.delete__sort button:focus {
+	outline: none;
+	box-shadow: 0 0 0 2px #ccc;
+}
 /*---------------------
   Shop
 -----------------------*/
@@ -1705,28 +1761,6 @@ ol {
 	color: #111111;
 	font-weight: 700;
 	margin-bottom: 8px;
-}
-
-.breadcrumb__links a {
-	font-size: 15px;
-	color: #111111;
-	margin-right: 18px;
-	display: inline-block;
-	position: relative;
-}
-
-.breadcrumb__links a:after {
-	position: absolute;
-	right: -14px;
-	top: 0;
-	content: "";
-	font-family: "FontAwesome";
-}
-
-.breadcrumb__links span {
-	font-size: 15px;
-	color: #b7b7b7;
-	display: inline-block;
 }
 
 /*---------------------
@@ -2134,6 +2168,12 @@ ol {
 .cart__total {
 	background: #f3f2ee;
 	padding: 35px 40px 40px;
+}
+
+.cart__total a:hover{
+	background-color: #ee0011;
+	cursor: pointer;
+	transition: 0.3s;
 }
 
 .cart__total h6 {
@@ -3246,6 +3286,9 @@ ol {
 	background-color: #fff;
 	width: 50%;
 	border-radius: 10px;
+	overflow-y: auto;
+	max-height: 515px;
+	min-height: 515px;
 }
 
 .account__title {
@@ -3262,6 +3305,10 @@ ol {
 	font-size: 17px;
 	line-height: 1.5;
 	margin-bottom: 10px;
+
+}
+.account__text__last{
+	border-bottom: 2px solid #ccc;
 }
 .account__add-address a {
 	color: #333;
@@ -3289,6 +3336,12 @@ ol {
 	font-weight: bold;
 	color: #333;
 	margin-top: 10px;
+}
+
+.chekAdm button{
+	margin-top: 20px;
+	width: 100px;
+	height: 50px;
 }
 
 
@@ -3348,5 +3401,52 @@ ol {
 }
 
 .add-address-page__button:hover {
+	background-color: #555;
+}
+
+
+
+
+
+
+
+
+
+.order-success-page {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	padding: 20px;
+	background-color: #f5f5f5;
+}
+
+.order-success-page h1 {
+	font-size: 2.5rem;
+	font-weight: 400;
+	color: #333;
+	margin-bottom: 20px;
+}
+
+.order-success-page p {
+	font-size: 1.2rem;
+	color: #666;
+	margin-bottom: 20px;
+}
+
+.order-success-page a {
+	display: inline-block;
+	padding: 10px 20px;
+	font-size: 1.2rem;
+	font-weight: 500;
+	color: #fff;
+	background-color: #333;
+	text-decoration: none;
+	border-radius: 5px;
+	transition: background-color 0.3s ease;
+}
+
+.order-success-page a:hover {
 	background-color: #555;
 }
